--- a/src/co/edu/uniquindio/progiii/subastasquindio/view/MainView.fxml
+++ b/src/co/edu/uniquindio/progiii/subastasquindio/view/MainView.fxml
@@ -3,8 +3,10 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Hyperlink?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -12,13 +14,13 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="497.0" prefWidth="851.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.progiii.subastasquindio.controllers.MainController">
+<AnchorPane prefHeight="690.0" prefWidth="1059.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.progiii.subastasquindio.controllers.MainController">
    <children>
-      <FlowPane prefHeight="65.0" prefWidth="858.0">
+      <FlowPane prefHeight="84.0" prefWidth="1059.0">
          <children>
             <ImageView fitHeight="64.0" fitWidth="220.0" pickOnBounds="true" preserveRatio="true">
                <FlowPane.margin>
-                  <Insets bottom="10.0" left="10.0" right="70.0" top="10.0" />
+                  <Insets bottom="10.0" left="10.0" right="250.0" top="10.0" />
                </FlowPane.margin>
                <image>
                   <Image url="@images/LogoSubastasQuindio.png" />
@@ -55,7 +57,76 @@
             </Button>
          </children>
       </FlowPane>
-      <Separator layoutX="-1.0" layoutY="80.0" prefHeight="10.0" prefWidth="874.0" />
-      <ListView fx:id="listViewInicio" layoutX="13.0" layoutY="100.0" prefHeight="383.0" prefWidth="847.0" />
+      <Separator layoutX="-1.0" layoutY="80.0" prefHeight="10.0" prefWidth="1061.0" />
+      <ListView fx:id="listViewInicio" layoutX="13.0" layoutY="100.0" prefHeight="575.0" prefWidth="489.0" />
+      <AnchorPane fx:id="anchorPaneArticuloSelec" layoutX="519.0" layoutY="102.0" prefHeight="573.0" prefWidth="523.0">
+         <children>
+            <ImageView fx:id="photoArticulo" fitHeight="158.0" fitWidth="228.0" layoutX="42.0" layoutY="17.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@images/DefaultImg.jpeg" />
+               </image>
+            </ImageView>
+            <Label fx:id="lblNombreArticulo" layoutX="311.0" layoutY="24.0" prefHeight="17.0" prefWidth="128.0" text="NombreArticulo">
+               <font>
+                  <Font size="19.0" />
+               </font>
+            </Label>
+            <Label fx:id="lblTipoArticulo" layoutX="320.0" layoutY="58.0" prefHeight="17.0" prefWidth="128.0" text="TipoArticulo">
+               <font>
+                  <Font size="19.0" />
+               </font>
+            </Label>
+            <TextField fx:id="txtValorPuja" disable="true" layoutX="237.0" layoutY="107.0" prefHeight="26.0" prefWidth="185.0" promptText="\$">
+               <font>
+                  <Font size="19.0" />
+               </font>
+            </TextField>
+            <Button fx:id="btnPujar" disable="true" layoutX="434.0" layoutY="107.0" mnemonicParsing="false" onAction="#pujar" text="¡Pujar!">
+               <font>
+                  <Font size="19.0" />
+               </font>
+            </Button>
+            <Label fx:id="lblDescripcion" layoutX="20.0" layoutY="182.0" prefHeight="124.0" prefWidth="497.0" text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sed tempus urna et pharetra pharetra massa. Velit sed ullamcorper morbi " wrapText="true">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </Label>
+            <Label layoutX="21.0" layoutY="319.0" prefHeight="17.0" prefWidth="128.0" text="Últimas pujas:">
+               <font>
+                  <Font size="19.0" />
+               </font>
+            </Label>
+            <Label fx:id="lblPuja1" layoutX="22.0" layoutY="356.0" prefHeight="17.0" prefWidth="128.0" text="Puja 1:">
+               <font>
+                  <Font size="17.0" />
+               </font>
+            </Label>
+            <Label fx:id="lblPuja2" layoutX="21.0" layoutY="389.0" prefHeight="17.0" prefWidth="128.0" text="Puja 2:">
+               <font>
+                  <Font size="17.0" />
+               </font>
+            </Label>
+            <Label fx:id="lblPuja5" layoutX="20.0" layoutY="487.0" prefHeight="17.0" prefWidth="128.0" text="Puja 5:">
+               <font>
+                  <Font size="17.0" />
+               </font>
+            </Label>
+            <Label fx:id="lblPuja3" layoutX="21.0" layoutY="422.0" prefHeight="17.0" prefWidth="128.0" text="Puja 3:">
+               <font>
+                  <Font size="17.0" />
+               </font>
+            </Label>
+            <Label fx:id="lblPuja4" layoutX="21.0" layoutY="454.0" prefHeight="17.0" prefWidth="128.0" text="Puja 4:">
+               <font>
+                  <Font size="17.0" />
+               </font>
+            </Label>
+         </children>
+      </AnchorPane>
+      <Label fx:id="lblInfo" layoutX="639.0" layoutY="274.0" prefHeight="72.0" prefWidth="284.0" text="¡Selecciona un artículo para visualizarlo!" textAlignment="CENTER" wrapText="true">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
