--- a/src/co/edu/uniquindio/progiii/subastasquindio/view/MainView.fxml
+++ b/src/co/edu/uniquindio/progiii/subastasquindio/view/MainView.fxml
@@ -58,8 +58,8 @@
          </children>
       </FlowPane>
       <Separator layoutX="-1.0" layoutY="80.0" prefHeight="10.0" prefWidth="1061.0" />
-      <ListView fx:id="listViewInicio" layoutX="13.0" layoutY="100.0" prefHeight="575.0" prefWidth="489.0" />
-      <AnchorPane fx:id="anchorPaneArticuloSelec" layoutX="519.0" layoutY="102.0" prefHeight="573.0" prefWidth="523.0" visible="false">
+      <ListView fx:id="listViewInicio" layoutX="13.0" layoutY="100.0" onMouseClicked="#selectionListView" prefHeight="575.0" prefWidth="489.0" />
+      <AnchorPane fx:id="anchorPaneArticuloSelec" layoutX="519.0" layoutY="102.0" onMouseMoved="#txtPujaFilled" prefHeight="573.0" prefWidth="523.0">
          <children>
             <ImageView fx:id="photoArticulo" fitHeight="158.0" fitWidth="228.0" layoutX="42.0" layoutY="17.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -76,7 +76,7 @@
                   <Font size="19.0" />
                </font>
             </Label>
-            <TextField fx:id="txtValorPuja" disable="true" layoutX="237.0" layoutY="107.0" prefHeight="26.0" prefWidth="185.0" promptText="\$">
+            <TextField fx:id="txtValorPuja" layoutX="237.0" layoutY="107.0" prefHeight="26.0" prefWidth="185.0" promptText="\$">
                <font>
                   <Font size="19.0" />
                </font>
@@ -86,7 +86,7 @@
                   <Font size="19.0" />
                </font>
             </Button>
-            <Label fx:id="lblDescripcion" layoutX="20.0" layoutY="182.0" prefHeight="124.0" prefWidth="497.0" text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sed tempus urna et pharetra pharetra massa. Velit sed ullamcorper morbi " wrapText="true">
+            <Label fx:id="lblDescripcion" layoutX="20.0" layoutY="217.0" prefHeight="99.0" prefWidth="497.0" text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sed tempus urna et pharetra pharetra massa. Velit sed ullamcorper morbi " wrapText="true">
                <font>
                   <Font size="16.0" />
                </font>
@@ -119,6 +119,11 @@
             <Label fx:id="lblPuja4" layoutX="21.0" layoutY="454.0" prefHeight="17.0" prefWidth="128.0" text="Puja 4:">
                <font>
                   <Font size="17.0" />
+               </font>
+            </Label>
+            <Label fx:id="lblVendedor" layoutX="22.0" layoutY="205.0" prefHeight="24.0" prefWidth="400.0" text="Vendido por: ">
+               <font>
+                  <Font size="19.0" />
                </font>
             </Label>
          </children>
