--- a/src/co/edu/uniquindio/progiii/subastasquindio/view/CrudAnuncios.fxml
+++ b/src/co/edu/uniquindio/progiii/subastasquindio/view/CrudAnuncios.fxml
@@ -15,7 +15,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="497.0" prefWidth="851.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.progiii.subastasquindio.controllers.ControllerCrudAnuncios">
+<AnchorPane prefHeight="497.0" prefWidth="851.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.progiii.subastasquindio.controllers.ControllerCrudAnuncios">
    <children>
       <FlowPane prefHeight="65.0" prefWidth="858.0">
          <children>
@@ -35,7 +35,7 @@
          </children>
       </FlowPane>
       <Separator layoutX="-1.0" layoutY="80.0" prefHeight="10.0" prefWidth="874.0" />
-      <ListView fx:id="listViewAnuncios" layoutX="17.0" layoutY="96.0" prefHeight="350.0" prefWidth="400.0" />
+      <ListView fx:id="listViewAnuncios" layoutX="17.0" layoutY="96.0" onMouseClicked="#selectionListView" prefHeight="350.0" prefWidth="400.0" />
       <Button fx:id="btnAtras" layoutX="795.0" layoutY="457.0" mnemonicParsing="false" onAction="#atras" text="Atrás" />
       <Button fx:id="btnGuardarCambios" layoutX="341.0" layoutY="457.0" mnemonicParsing="false" onAction="#guardarCambios" text="Guardar Cambios" />
       <Button fx:id="btnEditar" layoutX="97.0" layoutY="458.0" mnemonicParsing="false" onAction="#editar" text="Editar" />
