--- a/src/co/edu/uniquindio/progiii/subastasquindio/view/MainView.fxml
+++ b/src/co/edu/uniquindio/progiii/subastasquindio/view/MainView.fxml
@@ -20,13 +20,14 @@
          <children>
             <ImageView fitHeight="64.0" fitWidth="220.0" pickOnBounds="true" preserveRatio="true">
                <FlowPane.margin>
-                  <Insets bottom="10.0" left="10.0" right="250.0" top="10.0" />
+                  <Insets bottom="10.0" left="10.0" right="175.0" top="10.0" />
                </FlowPane.margin>
                <image>
                   <Image url="@images/LogoSubastasQuindio.png" />
                </image>
             </ImageView>
             <Text fx:id="bienvenida" strokeType="OUTSIDE" strokeWidth="0.0" text=" " />
+            <Button fx:id="btnCerrarSesion" mnemonicParsing="false" onAction="#cerrarSesion" text="Cerrar Sesión" visible="false" />
             <Button fx:id="btnVerAnuncios" mnemonicParsing="false" onAction="#verAnuncios" text="Ver Anuncios">
                <FlowPane.margin>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
