--- a/src/co/edu/uniquindio/progiii/subastasquindio/view/MainView.fxml
+++ b/src/co/edu/uniquindio/progiii/subastasquindio/view/MainView.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="690.0" prefWidth="1059.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.progiii.subastasquindio.controllers.MainController">
+<AnchorPane prefHeight="690.0" prefWidth="1059.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.progiii.subastasquindio.controllers.MainController">
    <children>
       <FlowPane prefHeight="84.0" prefWidth="1059.0">
          <children>
@@ -60,7 +60,7 @@
       </FlowPane>
       <Separator layoutX="-1.0" layoutY="80.0" prefHeight="10.0" prefWidth="1061.0" />
       <ListView fx:id="listViewInicio" layoutX="13.0" layoutY="100.0" onMouseClicked="#selectionListView" prefHeight="575.0" prefWidth="489.0" />
-      <AnchorPane fx:id="anchorPaneArticuloSelec" layoutX="519.0" layoutY="102.0" prefHeight="573.0" prefWidth="523.0">
+      <AnchorPane fx:id="anchorPaneArticuloSelec" layoutX="520.0" layoutY="101.0" prefHeight="573.0" prefWidth="523.0">
          <children>
             <ImageView fx:id="photoArticulo" fitHeight="158.0" fitWidth="228.0" layoutX="42.0" layoutY="17.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -135,6 +135,7 @@
             <Font size="24.0" />
          </font>
       </Label>
+      <Button fx:id="btnGuardarCompras" layoutX="521.0" layoutY="650.0" mnemonicParsing="false" onAction="#guardarComprasCSV" prefHeight="25.0" prefWidth="226.0" text="Guardar mis compras como CSV" visible="false" />
       <Button fx:id="btnVerPujas" layoutX="952.0" layoutY="652.0" mnemonicParsing="false" onAction="#verPujas" prefHeight="25.0" prefWidth="100.0" text="Ver mis pujas" visible="false" />
    </children>
 </AnchorPane>
